--- a/sanitize-docker-tag/package.json
+++ b/sanitize-docker-tag/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "sanitize_docker_tag",
+  "name": "sanitize-docker-tag",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@actions/core": "^1.6.0",
-    "@actions/github": "^5.0.0"
+    "@actions/core": "^1.6.0"
   }
 }
